# vArI-oceans-four

AI/Pranav/ocean_driftcast/: .gitignore  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY.md
AI/Pranav/ocean_driftcast/.claude/: settings.local.json
AI/Pranav/ocean_driftcast/JS/: ARCHITECTURE.md  DELIVERY_CHECKLIST.md  EXAMPLES.md  FINAL_STATUS.md  FIXES_APPLIED.md  PROJECT_INDEX.md  QUICKSTART.md  README.md  REPAIR_INSTRUCTIONS.md  UI_FEATURES.md  UPDATE_SUMMARY.md  VERIFICATION_COMPLETE.md  animation.py  combobox.py  main.py  particles.py  particles_broken_backup.py  physics.py  physics_broken_backup.py  requirements.txt  run_demo.bat  run_demo.sh  seeds.json  test_fixes.py  test_install.py  test_ui.py  ui.py  visualization.py
AI/Pranav/ocean_driftcast/JS/.claude/: settings.local.json
AI/Pranav/ocean_driftcast/JS/web-app/: DELIVERY.md  README.md  index.html  package.json
AI/Pranav/ocean_driftcast/JS/web-app/public/: seeds.json
AI/Pranav/ocean_driftcast/app/: app.py
AI/ocean-driftcast/: README.md  README_release.md  RUN_ALL.md  pyproject.toml
AI/ocean-driftcast/schemas/: crowd_drifters.schema.json
AI/ocean-driftcast/scripts/: build_docs.py  create_placeholder_videos.py  generate_synthetic_inputs.py  render_onepager_pdf.py
AI/ocean-driftcast/tests/: conftest.py  test_animate_longcut.py  test_fields.py  test_ingest.py  test_plots_module.py  test_post.py  test_sim.py  test_sources.py  test_units.py  test_validate.py
AI/ocean-driftcast/tests/viz/: test_golden_frame.py
